<resources>
    <string name="app_name">GameWithNoName</string>
    <string name="title_activity_maps">Map</string>

    <string name="activity_main_btn_catch_bot">Catch bot</string>
    <string name="activity_main_btn_game_friends">Seek for coins</string>
    <string name="activity_main_text_hello">Username</string>
    <string name="main_activity_text_rating">0</string>
    <string name="main_activity_text_coins">0</string>
    <string name="main_activity_error">Smth error!</string>
    <string name="activity_main_rating">0</string>
    <string name="activity_main_all_km">km</string>
    <string name="activity_main_all_time_description">for all time</string>

    <string name="activity_main_btn_stat_description">History</string>
    <string name="activity_main_btn_friends_description">People</string>
    <string name="activity_main_btn_info_description">Guide</string>
    <string name="activity_main_btn_1m_description">Catch bot mode</string>
    <string name="activity_main_btn_2m_description">Seek for coins mode</string>
    <string name="activity_main_btn_profile_description">My profile</string>

    <string name="activity_login_headline">Sign in</string>
    <string name="activity_login_prompt_login">Login</string>
    <string name="activity_login_prompt_password">Password</string>
    <string name="activity_login_ok">OK</string>
    <string name="activity_login_account_offer">Create new account</string>
    <string name="welcome">"Welcome, %s"</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_login_or_password">"Invalid name or password"</string>
    <string name="login_activity_you_need_reg">You must be authorized to continue</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="registration_date">Birth date</string>
    <string name="registration">Registration</string>
    <string name="registration_ok">OK</string>
    <string name="registration_name">Login</string>
    <string name="registration_male">Male</string>
    <string name="registration_female">Female</string>
    <string name="registration_password">Password</string>
    <string name="registration_rpt_password">Confirm password</string>
    <string name="registration_example_login">6 symbols min</string>
    <string name="registration_example_date">yyyy-mm-dd</string>
    <string name="registration_activity_data_not_valid">Data is invalid</string>
    <string name="registration_activity_name_problem">That name already exists, try another one</string>
    <string name="login_activity_incorrect_data">Doesn`t seem like true</string>
    <string name="activity_parameters_unknown_error">Connect with developer pls</string>
    <string name="activity_maps_score">Your score:</string>
    <string name="activity_maps_speed">Your speed:</string>
    <string name="activity_registration_notequal_passwords">Passwords are different</string>
    <string name="activity_registration_small_login">Login must contain more than 5 symbols</string>
    <string name="activity_registration_incorrect_login">Login cannot start with digit, have you ever registered?</string>
    <string name="activity_registration_small_password">Password must contain more than 5 symbols</string>


    <string name="activity_parameters_headline">Parameters</string>
    <string name="activity_parameters_button">Start</string>
    <string name="activity_parameters_time">Place for approximate time</string>
    <string name="activity_parameters_speed_calc">Speed val</string>
    <string name="activity_parameters_angle_val">Angle value</string>
    <string name="activity_parameters_instruction">Select finish point</string>

    <string name="maps_dialog_win">You win!</string>
    <string name="maps_dialog_lose">You lose</string>
    <string name="maps_dialog_win_ok">OK</string>
    <string name="maps_dialog_lose_ok">OK</string>

    <string name="activity_maps_bot_finishes">Bot finishes in %d minutes</string>
    <string name="layout_multi_people_close">Close</string>
    <string name="activity_friends_mode_name">Loading</string>
    <string name="activity_multiplayer_send_message">Send</string>
    <string name="activity_multiplayer_hint_write_message">Write message</string>
    <string name="alert_2m_in_team">In team</string>
    <string name="alert_2m_individually">Individually</string>
    <string name="alert_2m_time">time (minutes)</string>
    <string name="alert_2m_create">Create your game:</string>
    <string name="alert_2m_code">four digit code</string>
    <string name="alert_2m_join">Or join:</string>
    <string name="alert_2m_finish_game_text">Are you sure you want to finish the game? You will not be able to return.</string>
    <string name="alert_2m_finish_game">Finish this game</string>
    <string name="alert_2m_game_over">Game over</string>
    <string name="alert_2m_coins"><![CDATA[You pick <number> coins]]></string>
    <string name="alert_buy_2m_radius">Extend your point`s radius</string>
    <string name="alert_buy_2m_headline">Extensions</string>
    <string name="alert_buy_2m_button">Apply</string>
    <string name="alert_buy_2m_val">1 m</string>
    <string name="activity_friends_username">Username</string>
    <string name="activity_friends_rating">Rating</string>
    <string name="activity_friends_km">Km</string>
    <string name="activity_friends_btn_find">Find</string>
    <string name="activity_friends_regs">Reg</string>
    <string name="activity_friends_edittext">Name</string>
    <string name="you_pick_n_coins">You pick %d coins</string>
    <string name="count_days_in_timer">%d day(s)</string>
    <string name="count_hours_in_timer">%d hour(s)</string>
    <string name="leave_user_from_game">User %s has been suspended from the game</string>
    <string name="author_is">It is written by %s</string>
    <string name="message_sended_successful">Message sent</string>
    <string name="message_is_not_sended">Problem is %d</string>
    <string name="ok_in_legend">OK</string>
    <string name="you_have_not_enough_money">You haven`t got enough money</string>
    <string name="only_author_can_begin_game">Only creator can start the game</string>
    <string name="not_enough_people">One is not a team</string>
    <string name="input_valie_time">Invalid time</string>
    <string name="not_enough_time">This time is not enough for players` location</string>
    <string name="you_get_coins">You get %d coins, great!</string>
    <string name="problem_internet">You have problem with internet connection</string>
    <string name="you_have_unfinished_game">You have unfinished game</string>
    <string name="time_in_first_mode">About %.1f min</string>
    <string name="speed_in_first_mode">Speed: %.1f km/h</string>
    <string name="angle_in_first_mode">Angle: %d°</string>
    <string name="way_not_found">Way is not found</string>
    <string name="chouse_other_point">Choose another finish point</string>
    <string name="sign_up_success">Successfully</string>
    <string name="game_is_not_created">Game has not created</string>
    <string name="game_already_begin">Game has already begun</string>
    <string name="link_is_incorrect">Link is incorrect</string>
    <string name="your_score_is">Your score: +%d</string>
    <string name="your_speed_is">Your speed: %d</string>
    <string name="just_try_again">Unknown error</string>
    <string name="unknown_error">Unknown error</string>
    <string name="remote_problem">Remote error</string>
    <string name="network_problem">Network error</string>
    <string name="problem_with_money">You haven`t got enough money</string>
    <string name="alert_time_headline">Write time for this game</string>
    <string name="alert_time_hint">minutes</string>
    <string name="alert_time_btn">OK</string>
    <string name="create_game">Create</string>
    <string name="join_game">Join</string>
    <string name="alert_end_2m">OK</string>
    <string name="activity_main_coins">%d km</string>
    <string name="you_get_rating">You get +%d rating</string>
    <string name="apply_extensions_less">It`s less than current</string>
    <string name="new_radius">%dm</string>
    <string name="new_radius_coins">%dm: %d coins</string>
    <string name="info_data">Soon</string>
    <string name="layout_gamers_headline">Players</string>
    <string name="layout_gamers_close">Close</string>
    <string name="activity_info_about">About</string>
    <string name="activity_info_hints">Show hints</string>
    <string name="activity_parameters_hints_headline">Hint</string>
    <string name="activity_parameters_hints">Firstly, choose the finish point, then, if you want, change parameters for bot: speed and angle. Angle is formed by your location, finish point and bot location. If you don`t want to choose, there are default values already (7km/h, 40°).</string>
    <string name="activity_maps_hints_headline">Hint</string>
    <string name="activity_maps_hints">You need to catch bot, that is going to the point you chose. The earlier you do it, the bigger score will be charged to you. If bot finishes, you lose. You can pause bot for {i cannot understand the function} coins.</string>
    <string name="activity_sec1_hints_headline">Hint</string>
    <string name="activity_sec1_hints">If you are the creator of the game, you need to tell the key, that is given in the top, to your team. You can see all members of your team on click to one of the buttons below, there is their colors too. And the creator can remove member from the game there. When there are more members, than one, the creator can start the game. He need to click the round button for it. Minimum time depends of members location and it cannot be less than 5 minutes.</string>
    <string name="activity_sec2_hints_headline">Hint</string>
    <string name="activity_sec2_hints">You need to find as much coins as possible for the specified time. To grab the coin you need to enter its area and maybe, you need wait a little, until it disappears. All finded coins are calculated to all players, regardless of their contribution.</string>
</resources>
