<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimaryLight">

    <TextView
        android:id="@+id/text_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/alert_2m_create"
        android:fontFamily="@font/ubuntu"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="21sp" />

    <RadioGroup
        android:id="@+id/radio_group_modes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_create"
        android:layout_alignParentStart="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:checkedButton="@id/radio_button_in_team">

        <RadioButton
            android:id="@+id/radio_button_in_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu"
            android:text="@string/alert_2m_in_team" />

        <RadioButton
            android:id="@+id/radio_button_individual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu"
            android:text="@string/alert_2m_individually" />
    </RadioGroup>

    <TextView
        android:id="@+id/text_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_create"
        android:layout_alignParentStart="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:text="@string/alert_2m_join"
        android:fontFamily="@font/ubuntu"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="21sp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_join"
        android:layout_alignStart="@+id/text_create"
        android:layout_marginStart="-4dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:hint="@string/alert_2m_code"
        android:inputType="number" />

    <Button
        android:id="@+id/btn_create"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio_group_modes"
        android:layout_alignParentStart="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/green_buttons"
        android:gravity="center"
        android:text="@string/create_game"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_join"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/green_buttons"
        android:gravity="center"
        android:text="@string/join_game"
        android:textColor="@android:color/white" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/btn_join"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>