<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/text_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/alert_2m_create" />

    <RadioGroup
        android:id="@+id/radio_group_modes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_create"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:checkedButton="@id/radio_button_in_team">

        <RadioButton
            android:id="@+id/radio_button_in_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alert_2m_in_team" />

        <RadioButton
            android:id="@+id/radio_button_individual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alert_2m_individually" />
    </RadioGroup>

    <EditText
        android:id="@+id/text_alert_2m"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio_group_modes"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/alert_2m_time"
        android:inputType="number" />

    <TextView
        android:id="@+id/text_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_create"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/alert_2m_join"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_join"
        android:layout_alignStart="@+id/text_create"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/alert_2m_code"
        android:inputType="number" />

    <Button
        android:id="@+id/btn_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_alert_2m"
        android:layout_alignParentStart="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="Create" />

    <Button
        android:id="@+id/btn_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="Join" />

</RelativeLayout>