<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorAccentLight">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/ubuntu"
        android:gravity="center"
        android:text="@string/alert_2m_game_over"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:fontFamily="@font/ubuntu"
        android:textSize="24sp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/alert_2m_coins" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_marginStart="173dp"
        android:layout_marginTop="19dp"
        android:background="@drawable/all_accented_buttons"
        android:textColor="@android:color/white"
        android:text="@string/alert_end_2m" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_below="@+id/button4"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"/>
</RelativeLayout>
